@@ -2,7 +2,7 @@ runit (0.7.1-1) unstable; urgency=low
 
   * new upstream version.
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 21 Oct 2002 16:51:49 +0200
+ -- Gerrit Pape <pape@smarden.org>  Wed, 23 Oct 2002 11:46:01 +0200
 
 runit (0.7.0-3) unstable; urgency=low
 
